--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="./الصفحه الرئيسية للطالب_files/bootstrap.min.css" rel="stylesheet">
     <link href="./الصفحه الرئيسية للطالب_files/style(1).css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style1.css">
-    </head><body data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos-delay="0"><i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+    </head><body data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos-delay="0">
 
 
     <style>
